--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
+# msobox .gitignore
+# Blacklist
 *~
 *.pyc
-
+*.pdf
+.coverage
+.tox/
+htmlcov/
 sonic.log
+*.o
+*.so
+*.bak
+fort.*
+
+# Whitelist
+!tox.ini
