--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
     # - "pip install coverage"
     # - "pip install coveralls"
 script:
-    setup.py test
+    python setup.py test
     # - "coverage run --source=msobox setup.py test"
 after_success:
     true
