--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 python:
     - "2.7"
 install:
-    true
-    # - "pip install -r requirements.txt --use-mirrors"
+    - "pip install -r requirements.txt --use-mirrors"
     # - "pip install coverage"
     # - "pip install coveralls"
 script:
